Fixed random sorting on cards and fixed word-break on cards

--- a/lifelearn/content/assets/css/general.css
+++ b/lifelearn/content/assets/css/general.css
@@ -119,6 +119,8 @@
 	width:150px;
 	padding:10px;
 	text-align:center;
+	word-wrap: break-word;
+	white-space: normal;
 }
 
 .edit-task-card .input {
